# ollocode

./: .gitignore  AGENTS.md  Cargo.toml  README.md
scripts/: install.sh
src/: agents.rs  app.rs  config.rs  main.rs  ollama.rs  terminal.rs  tools.rs  tui.rs
