[package]
name = "ollo-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "sync"] }
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
